Update after new swagger
